refactor: admin job statistics to allow queries